<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="dev.redfox.newsapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_newsDetailFragment"
            app:destination="@+id/navigation_newsDetail"
            app:popUpTo="@+id/navigation_newsDetail"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="dev.redfox.newsapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_newsDetail"
        android:name="dev.redfox.newsapp.ui.home.NewsDetailFragment"
        android:label="NewsDetailFragment"
        tools:layout="@layout/fragment_news_detail" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="dev.redfox.newsapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>