<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

  <HorizontalScrollView
      android:id="@+id/horizontalScrollView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:animateLayoutChanges="true"
      android:animationCache="true"
      android:layout_marginTop="10dp"
      android:scrollbars="none"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

      <androidx.cardview.widget.CardView
          android:id="@+id/cvAll"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginHorizontal="5dp"
          android:backgroundTint="@color/blueMain"
          app:cardCornerRadius="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:fontFamily="@font/sofiaprosoftmedium"
            android:text="@string/all"
            android:textColor="@color/white"
            android:textSize="20sp" />
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/cvNational"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginHorizontal="5dp"
          android:backgroundTint="@color/material_blue"
          app:cardCornerRadius="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:fontFamily="@font/sofiaprosoftmedium"
            android:text="@string/national"
            android:textColor="@color/white"
            android:textSize="20sp" />
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/cvBusiness"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginHorizontal="5dp"
          android:backgroundTint="@color/blueMain"
          app:cardCornerRadius="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:fontFamily="@font/sofiaprosoftmedium"
            android:text="@string/business"
            android:textColor="@color/white"
            android:textSize="20sp" />
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/cvSports"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginHorizontal="5dp"
          android:backgroundTint="@color/material_blue"
          app:cardCornerRadius="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:fontFamily="@font/sofiaprosoftmedium"
            android:text="@string/sports"
            android:textColor="@color/white"
            android:textSize="20sp" />
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/cvWorld"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginHorizontal="5dp"
          android:backgroundTint="@color/blueMain"
          app:cardCornerRadius="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:fontFamily="@font/sofiaprosoftmedium"
            android:text="@string/world"
            android:textColor="@color/white"
            android:textSize="20sp" />
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/cvPolitics"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginHorizontal="5dp"
          android:backgroundTint="@color/material_blue"
          app:cardCornerRadius="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:fontFamily="@font/sofiaprosoftmedium"
            android:text="@string/politics"
            android:textColor="@color/white"
            android:textSize="20sp" />
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/cvTech"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginHorizontal="5dp"
          android:backgroundTint="@color/blueMain"
          app:cardCornerRadius="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:fontFamily="@font/sofiaprosoftmedium"
            android:text="@string/technology"
            android:textColor="@color/white"
            android:textSize="20sp" />
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/cvEntertainment"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginHorizontal="5dp"
          android:backgroundTint="@color/material_blue"
          app:cardCornerRadius="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:fontFamily="@font/sofiaprosoftmedium"
            android:text="@string/entertainment"
            android:textColor="@color/white"
            android:textSize="20sp" />
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/cvScience"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginHorizontal="5dp"
          android:backgroundTint="@color/blueMain"
          app:cardCornerRadius="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:fontFamily="@font/sofiaprosoftmedium"
            android:text="@string/science"
            android:textColor="@color/white"
            android:textSize="20sp" />
      </androidx.cardview.widget.CardView>
    </LinearLayout>
  </HorizontalScrollView>

  <TextView
      android:id="@+id/tvNationalNews"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/latest_news"
      android:layout_marginVertical="20dp"
      android:paddingHorizontal="15dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rvNewsHome"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginVertical="10dp"
      android:paddingHorizontal="10dp"
      android:paddingBottom="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      tools:itemCount="5"
      app:layout_constraintTop_toBottomOf="@+id/tvNationalNews"
      tools:listitem="@layout/item_home_news" />
</androidx.constraintlayout.widget.ConstraintLayout>